force-app/main/default/objects/CodigoProtheus__c/CodigoProtheus__c.object-meta.xml
<CustomObject>
    <label>Código Protheus</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Código Protheus</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Códigos Protheus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>