force-app/main/default/objects/CodigoProtheus__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <length>3</length>
    <type>Text</type>
</CustomField>