force-app/main/default/objects/CodigoProtheus__c/fields/Filial__c.field-meta.xml
<CustomField>
    <fullName>Filial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filial</label>
    <referenceTo>Filial__c</referenceTo>
    <relationshipLabel>Códigos Protheus</relationshipLabel>
    <relationshipName>CodigosProtheus</relationshipName>
    <type>Lookup</type>
</CustomField>