force-app/main/default/objects/CodigoProtheus__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Produto: CodigoFilial + CodigoProduto
Conta: UnidadeNegocio + Empresa + 9 DigitosDocumento
Parceiro: Código da Empresa | 6 Dígitos do Documento
Representante: Código da Filial | Documento</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>