force-app/main/default/objects/CodigoProtheus__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Código Protheus</relationshipLabel>
    <relationshipName>CodigosProtheus</relationshipName>
    <type>Lookup</type>
</CustomField>