force-app/main/default/objects/CodigoProtheus__c/recordTypes/Conta.recordType-meta.xml
<RecordType>
    <fullName>Conta</fullName>
    <active>true</active>
    <label>Conta</label>
</RecordType>