force-app/main/default/objects/CodigoProtheus__c/recordTypes/Parceiro.recordType-meta.xml
<RecordType>
    <fullName>Parceiro</fullName>
    <active>true</active>
    <description>Tipo de registro criado para cadastrar parceiros (PF e PJ)</description>
    <label>Parceiro</label>
</RecordType>