force-app/main/default/objects/CodigoProtheus__c/recordTypes/Produtos.recordType-meta.xml
<RecordType>
    <fullName>Produtos</fullName>
    <active>true</active>
    <label>Produtos</label>
</RecordType>