force-app/main/default/objects/CodigoProtheus__c/recordTypes/Representante.recordType-meta.xml
<RecordType>
    <fullName>Representante</fullName>
    <active>true</active>
    <description>Tipo de registro criado para receber diferentes filiais dos mesmos representantes.</description>
    <label>Representante</label>
</RecordType>