force-app/main/default/objects/CodigoProtheus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>UnidadeNegocio__c</columns>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Filial__c</columns>
    <columns>Representante__c</columns>
    <columns>Produto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>