force-app/main/default/objects/CodigoProtheus__c/listViews/Parceiros.listView-meta.xml
<ListView>
    <fullName>Parceiros</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Conta__c</columns>
    <columns>Filial__c</columns>
    <columns>Ativo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CodigoProtheus__c.Parceiro</value>
    </filters>
    <label>Parceiros</label>
</ListView>