force-app/main/default/objects/CodigoProtheus__c/listViews/Representantes.listView-meta.xml
<ListView>
    <fullName>Representantes</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Filial__c</columns>
    <columns>Representante__c</columns>
    <columns>Ativo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CodigoProtheus__c.Representante</value>
    </filters>
    <label>Representantes</label>
</ListView>